--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,21 @@
             <p>Une question, une demande de shooting ou un projet à discuter ? Remplissez le formulaire ci-dessous :</p>
 
 <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form" id="contactForm">
+  <!-- Nom complet -->
   <label for="name">Nom complet *</label>
-  <input type="text" id="name" name="name" placeholder="Votre nom complet" required>
+  <input type="text" id="name" name="name" placeholder="Votre nom complet (obligatoire)" required>
 
-  <label for="email">Adresse e-mail *</label>
-  <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail" required>
+  <!-- Prénom -->
+  <label for="firstname">Prénom *</label>
+  <input type="text" id="firstname" name="firstname" placeholder="Votre prénom (obligatoire)" required>
+
+  <!-- Numéro de téléphone -->
+  <label for="phone">Numéro de téléphone *</label>
+  <input type="tel" id="phone" name="phone" placeholder="Votre numéro de téléphone (obligatoire)" required>
+
+  <!-- Adresse e-mail -->
+  <label for="email">Adresse e-mail</label>
+  <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail (optionnel)">
 
   <!-- Type de shooting -->
   <div class="form-group">
@@ -69,11 +79,12 @@
     </div>
   </div>
 
-  <!-- Zone de description déplacée et retravaillée -->
+  <!-- Zone de description -->
   <label for="message">Décrivez votre projet *</label>
-  <textarea id="message" name="message" rows="5" placeholder="Décrivez-nous votre projet : type de séance, lieu, ambiance souhaitée, nombre de personnes, contraintes ou envies particulières..." required></textarea>
+  <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." required></textarea>
 
-  <button type="submit" class="btn">Envoyer</button>
+  <!-- Bouton -->
+  <button type="submit" class="btn">Envoyer le message</button>
   <p id="formMessage" class="form-message"></p>
 </form>
 
