--- a/contact.html
+++ b/contact.html
@@ -19,74 +19,78 @@
         </nav>
     </header>
 
-    <main>
-        <section class="contact">
-            <h2>Contactez-moi</h2>
-            <p>Une question, une demande de shooting ou un projet à discuter ? Remplissez le formulaire ci-dessous :</p>
+<main>
+  <section class="contact about-container">
+    <div class="contact-content">
+      <div class="contact-text">
+        <h2>Contactez-moi</h2>
+        <p>Une question, une demande de shooting ou un projet à discuter ? Remplissez le formulaire ci-dessous :</p>
 
-<form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form" id="contactForm">
-  <!-- Nom complet -->
-  <label for="name">Nom complet *</label>
-  <input type="text" id="name" name="name" placeholder="Votre nom complet (obligatoire)" required>
+        <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form" id="contactForm">
+          <label for="name">Nom complet *</label>
+          <input type="text" id="name" name="name" placeholder="Votre nom complet (obligatoire)" required>
 
-  <!-- Prénom -->
-  <label for="firstname">Prénom *</label>
-  <input type="text" id="firstname" name="firstname" placeholder="Votre prénom (obligatoire)" required>
+          <label for="firstname">Prénom *</label>
+          <input type="text" id="firstname" name="firstname" placeholder="Votre prénom (obligatoire)" required>
 
-  <!-- Numéro de téléphone -->
-  <label for="phone">Numéro de téléphone *</label>
-  <input type="tel" id="phone" name="phone" placeholder="Votre numéro de téléphone (obligatoire)" required>
+          <label for="phone">Numéro de téléphone *</label>
+          <input type="tel" id="phone" name="phone" placeholder="Votre numéro de téléphone (obligatoire)" required>
 
-  <!-- Adresse e-mail -->
-  <label for="email">Adresse e-mail</label>
-  <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail (optionnel)">
+          <label for="email">Adresse e-mail</label>
+          <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail (optionnel)">
 
-  <!-- Type de shooting -->
-  <div class="form-group">
-    <label for="shooting-type">Type de shooting souhaité *</label>
-    <div class="shooting-options">
-      <label class="shooting-option">
-        <input type="checkbox" name="shooting_type" value="pub">
-        <div class="option-card">
-          <span class="icon">📸</span>
-          <span class="text">Shooting Pub</span>
-        </div>
-      </label>
+          <div class="form-group">
+            <label for="shooting-type">Type de shooting souhaité *</label>
+            <div class="shooting-options">
+              <label class="shooting-option">
+                <input type="checkbox" name="shooting_type" value="pub">
+                <div class="option-card">
+                  <span class="icon">📸</span>
+                  <span class="text">Shooting Pub</span>
+                </div>
+              </label>
 
-      <label class="shooting-option">
-        <input type="checkbox" name="shooting_type" value="evenement">
-        <div class="option-card">
-          <span class="icon">🎉</span>
-          <span class="text">Shooting Événement</span>
-        </div>
-      </label>
+              <label class="shooting-option">
+                <input type="checkbox" name="shooting_type" value="evenement">
+                <div class="option-card">
+                  <span class="icon">🎉</span>
+                  <span class="text">Shooting Événement</span>
+                </div>
+              </label>
 
-      <label class="shooting-option">
-        <input type="checkbox" name="shooting_type" value="mariage">
-        <div class="option-card">
-          <span class="icon">💍</span>
-          <span class="text">Shooting Mariage</span>
-        </div>
-      </label>
+              <label class="shooting-option">
+                <input type="checkbox" name="shooting_type" value="mariage">
+                <div class="option-card">
+                  <span class="icon">💍</span>
+                  <span class="text">Shooting Mariage</span>
+                </div>
+              </label>
 
-      <label class="shooting-option">
-        <input type="checkbox" name="shooting_type" value="personnel">
-        <div class="option-card">
-          <span class="icon">👤</span>
-          <span class="text">Shooting Personnel</span>
-        </div>
-      </label>
+              <label class="shooting-option">
+                <input type="checkbox" name="shooting_type" value="personnel">
+                <div class="option-card">
+                  <span class="icon">👤</span>
+                  <span class="text">Shooting Personnel</span>
+                </div>
+              </label>
+            </div>
+          </div>
+
+          <label for="message">Décrivez votre projet *</label>
+          <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." required></textarea>
+
+          <button type="submit" class="btn">Envoyer le message</button>
+          <p id="formMessage" class="form-message"></p>
+        </form>
+      </div>
+
+      <!-- Bloc photo à droite -->
+      <div class="contact-photo">
+        <img src="images/contact-style.jpg" alt="Photo de contact">
+      </div>
     </div>
-  </div>
-
-  <!-- Zone de description -->
-  <label for="message">Décrivez votre projet *</label>
-  <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." required></textarea>
-
-  <!-- Bouton -->
-  <button type="submit" class="btn">Envoyer le message</button>
-  <p id="formMessage" class="form-message"></p>
-</form>
+  </section>
+</main>
 
     <footer>
         <p>© 2025 L'Objectif de Gabriel - Tous droits réservés.</p>
