--- a/contact.html
+++ b/contact.html
@@ -1,101 +1,102 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - L'Objectif de Gabriel</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact - L'Objectif de Gabriel</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <h1>L'Objectif de Gabriel</h1>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="galerie.html">Galerie</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <h1>L'Objectif de Gabriel</h1>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html">À propos</a></li>
+        <li><a href="galerie.html">Galerie</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<main>
-  <section class="contact about-container">
-    <div class="contact-content">
-      <div class="contact-text">
-        <h2>Contactez-moi</h2>
-        <p>Une question, une demande de shooting ou un projet à discuter ? Remplissez le formulaire ci-dessous :</p>
+  <main>
+    <section class="contact about-container">
+      <div class="contact-content">
+        <div class="contact-text">
+          <h2>Contactez-moi</h2>
+          <p>Une question, une demande de shooting ou un projet à discuter ? Remplissez le formulaire ci-dessous :</p>
 
-        <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form" id="contactForm">
-          <label for="name">Nom complet *</label>
-          <input type="text" id="name" name="name" placeholder="Votre nom complet (obligatoire)" required>
+          <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form" id="contactForm">
+            <label for="name">Nom complet *</label>
+            <input type="text" id="name" name="name" placeholder="Votre nom complet (obligatoire)" required>
 
-          <label for="firstname">Prénom *</label>
-          <input type="text" id="firstname" name="firstname" placeholder="Votre prénom (obligatoire)" required>
+            <label for="firstname">Prénom *</label>
+            <input type="text" id="firstname" name="firstname" placeholder="Votre prénom (obligatoire)" required>
 
-          <label for="phone">Numéro de téléphone *</label>
-          <input type="tel" id="phone" name="phone" placeholder="Votre numéro de téléphone (obligatoire)" required>
+            <label for="phone">Numéro de téléphone *</label>
+            <input type="tel" id="phone" name="phone" placeholder="Votre numéro de téléphone (obligatoire)" required>
 
-          <label for="email">Adresse e-mail</label>
-          <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail (optionnel)">
+            <label for="email">Adresse e-mail</label>
+            <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail (optionnel)">
 
-          <div class="form-group">
-            <label for="shooting-type">Type de shooting souhaité *</label>
-            <div class="shooting-options">
-              <label class="shooting-option">
-                <input type="checkbox" name="shooting_type" value="pub">
-                <div class="option-card">
-                  <span class="icon">📸</span>
-                  <span class="text">Shooting Pub</span>
-                </div>
-              </label>
+            <div class="form-group">
+              <label for="shooting-type">Type de shooting souhaité *</label>
+              <div class="shooting-options">
+                <label class="shooting-option">
+                  <input type="checkbox" name="shooting_type" value="pub">
+                  <div class="option-card">
+                    <span class="icon">📸</span>
+                    <span class="text">Shooting Pub</span>
+                  </div>
+                </label>
 
-              <label class="shooting-option">
-                <input type="checkbox" name="shooting_type" value="evenement">
-                <div class="option-card">
-                  <span class="icon">🎉</span>
-                  <span class="text">Shooting Événement</span>
-                </div>
-              </label>
+                <label class="shooting-option">
+                  <input type="checkbox" name="shooting_type" value="evenement">
+                  <div class="option-card">
+                    <span class="icon">🎉</span>
+                    <span class="text">Shooting Événement</span>
+                  </div>
+                </label>
 
-              <label class="shooting-option">
-                <input type="checkbox" name="shooting_type" value="mariage">
-                <div class="option-card">
-                  <span class="icon">💍</span>
-                  <span class="text">Shooting Mariage</span>
-                </div>
-              </label>
+                <label class="shooting-option">
+                  <input type="checkbox" name="shooting_type" value="mariage">
+                  <div class="option-card">
+                    <span class="icon">💍</span>
+                    <span class="text">Shooting Mariage</span>
+                  </div>
+                </label>
 
-              <label class="shooting-option">
-                <input type="checkbox" name="shooting_type" value="personnel">
-                <div class="option-card">
-                  <span class="icon">👤</span>
-                  <span class="text">Shooting Personnel</span>
-                </div>
-              </label>
+                <label class="shooting-option">
+                  <input type="checkbox" name="shooting_type" value="personnel">
+                  <div class="option-card">
+                    <span class="icon">👤</span>
+                    <span class="text">Shooting Personnel</span>
+                  </div>
+                </label>
+              </div>
             </div>
-          </div>
 
-          <label for="message">Décrivez votre projet *</label>
-          <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." required></textarea>
+            <label for="message">Décrivez votre projet *</label>
+            <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." required></textarea>
 
-          <button type="submit" class="btn">Envoyer le message</button>
-          <p id="formMessage" class="form-message"></p>
-        </form>
+            <button type="submit" class="btn">Envoyer le message</button>
+            <p id="formMessage" class="form-message"></p>
+
+            <!-- 👇 PHOTO à la fin du formulaire -->
+            <div class="contact-photo">
+              <img src="images/contact-style.jpg" alt="Photo de contact">
+            </div>
+          </form>
+        </div>
       </div>
+    </section>
+  </main>
 
-      <!-- Bloc photo à droite -->
-      <div class="contact-photo">
-        <img src="images/contact-style.jpg" alt="Photo de contact">
-      </div>
-    </div>
-  </section>
-</main>
+  <footer>
+    <p>© 2025 L'Objectif de Gabriel - Tous droits réservés.</p>
+  </footer>
 
-    <footer>
-        <p>© 2025 L'Objectif de Gabriel - Tous droits réservés.</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
