--- a/about.html
+++ b/about.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À Propos - L'Objectif de Gabriel</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>À propos - L'Objectif de Gabriel</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1>L'Objectif de Gabriel</h1>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À Propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="rdv.html">Prendre RDV</a></li>
-                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <h1>L'Objectif de Gabriel</h1>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html" class="active">À propos</a></li>
+        <li><a href="galerie.html">Galerie</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-<section class="about">
-    <div class="about-container">
+  <main>
+    <section class="about">
+      <div class="about-container">
+        <h2>À Propos de Nous</h2>
         <div class="about-text">
-            <h2>À Propos de Nous</h2>
-            <p>Photographe basé dans le 44, je suis passionné par l'art de figer l'instant pour en faire un souvenir impérissable. Mon objectif ? Saisir la magie des moments qui comptent, qu'il s'agisse de la complicité étincelante d'un mariage, de l'énergie unique d'un événement ou de la personnalité qui se dégage lors d'un portrait.</p>
-            
-            <p>Je crois que les plus belles photos sont celles où l'on oublie l'appareil. Mon approche est donc à la fois bienveillante et discrète, mêlant conseils avisés et capture spontanée des rires, des regards et des émotions pures. Guidé par une lumière naturelle que je chéris et un équipement professionnel, je m'engage à transformer vos précieux souvenirs en véritables œuvres d'art, authentiques et intemporelles.</p>
-            
-            <p>Fort de plusieurs années d'expérience, je me déplace dans toute la France pour immortaliser votre histoire. N'hésitez pas à me contacter pour en discuter autour d'un café.</p>
+          <p>
+            Photographe basé dans le 44, je suis passionné par l'art de figer l'instant pour en faire un souvenir impérissable.
+            Mon objectif ? Saisir la magie des moments qui comptent, qu'il s'agisse de la complicité étincelante d'un mariage,
+            de l'énergie unique d'un événement ou de la personnalité qui se dégage lors d'un portrait.
+          </p>
+          <p>
+            Je crois que les plus belles photos sont celles où l'on oublie l'appareil.
+            Mon approche est donc à la fois bienveillante et discrète, mêlant conseils avisés et capture spontanée
+            des rires, des regards et des émotions pures.
+          </p>
+          <p>
+            Guidé par une lumière naturelle que je chéris et un équipement professionnel, je m'engage à transformer
+            vos précieux souvenirs en véritables œuvres d'art, authentiques et intemporelles.
+          </p>
+          <p>
+            Fort de plusieurs années d'expérience, je me déplace dans toute la France pour immortaliser votre histoire.
+            N'hésitez pas à me contacter pour en discuter autour d'un café.
+          </p>
         </div>
 
         <div class="about-photo">
-            <img src="images/gabriel.jpg" alt="Portrait de Gabriel, photographe professionnel en action">
+          <img src="images/about-photo.jpg" alt="Photo du photographe Gabriel">
         </div>
-    </div>
-</section>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 L'Objectif de Gabriel. Tous droits réservés.</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <footer>
+    <p>© 2025 L'Objectif de Gabriel - Tous droits réservés.</p>
+  </footer>
 </body>
 </html>
