--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="about-photo">
-          <img src="images/about-photo.jpg" alt="Photo du photographe Gabriel">
+          <img src="images/gabriel.jpg" alt="Photo du photographe Gabriel">
         </div>
       </div>
     </section>
