--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="about.html" class="active">À propos</a></li>
-        <li><a href="galerie.html">Galerie</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="rdv.html">Prendre RDV</a></li>
       </ul>
     </nav>
   </header>
