--- a/cliches-favoris.html
+++ b/cliches-favoris.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes Clichés Favoris - L'Objectif de Gabriel</title>
+    <title>Mariage - L'Objectif de Gabriel</title>
     <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="galerie.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,107 +17,106 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
-                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li> <!-- Nouveau lien -->
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h2>Mes Clichés Favoris</h2>
-            <p>Une sélection de mes photos préférées, mélange de tous les styles.</p>
+            <h2>Photographie de Mariage</h2>
+            <p>Des clichés émouvants pour votre plus beau jour. De la préparation à la fête, chaque moment compté.</p>
         </section>
 
         <section class="galerie">
-            <h2>Galerie Générale</h2>
+            <h2>Galerie Favoris</h2>
             <div class="corkboard">
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale1.jpg" alt="Cliché favori 1">
+                        <img src="images/generale/generale1.jpg" alt="Couple marié en extérieur">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale2.jpg" alt="Cliché favori 2">
+                        <img src="images/generale/generale2.jpg" alt="Préparation de la mariée">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale3.jpg" alt="Cliché favori 3">
+                        <img src="images/generale/generale3.jpg" alt="Échange d'anneaux">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale4.jpg" alt="Cliché favori 4">
+                        <img src="images/generale/generale4.jpg" alt="Danse des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale5.jpg" alt="Cliché favori 5">
+                        <img src="images/generale/generale5.jpg" alt="Cérémonie intime">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale6.jpg" alt="Cliché favori 6">
+                        <img src="images/generale/generale6.jpg" alt="Photos de groupe">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale7.jpg" alt="Cliché favori 7">
+                        <img src="images/generale/generale7.jpg" alt="Coucher de soleil mariage">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale8.jpg" alt="Cliché favori 8">
+                        <img src="images/generale/generale8.jpg" alt="Dîner festif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale9.jpg" alt="Cliché favori 9">
+                        <img src="images/generale/generale9.jpg" alt="Baiser des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale10.jpg" alt="Cliché favori 10">
+                        <img src="images/generale/generale10.jpg" alt="Décoration florale">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale11.jpg" alt="Cliché favori 11">
+                        <img src="images/generale/generale11.jpg" alt="Mariée seule portrait">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale12.jpg" alt="Cliché favori 12">
+                        <img src="images/generale/generale12.jpg" alt="Marié en costume">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale13.jpg" alt="Cliché favori 13">
+                        <img src="images/generale/generale13.jpg" alt="Fête dansante">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale14.jpg" alt="Cliché favori 14">
+                        <img src="images/generale/generale14.jpg" alt="Détails alliance">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/generale/generale15.jpg" alt="Cliché favori 15">
+                        <img src="images/generale/generale15.jpg" alt="Fin de soirée émouvante">
                     </div>
                     <div class="pin"></div>
                 </div>
