--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="about.html">À propos</a></li>
-        <li><a href="galerie.html">Galerie</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="rdv.html">Prendre RDV</a></li>
       </ul>
     </nav>
   </header>
@@ -27,67 +27,66 @@
           <h2>Contactez-moi</h2>
           <p>Une question, une demande de shooting ou un projet à discuter ? Remplissez le formulaire ci-dessous :</p>
 
-          <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form" id="contactForm">
-            <label for="name">Nom complet *</label>
-            <input type="text" id="name" name="name" placeholder="Votre nom complet (obligatoire)" required>
+         <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form" id="contactForm">
+  <label for="firstname">Prénom *</label>
+  <input type="text" id="firstname" name="firstname" placeholder="Votre prénom (obligatoire)" required>
 
-            <label for="firstname">Prénom *</label>
-            <input type="text" id="firstname" name="firstname" placeholder="Votre prénom (obligatoire)" required>
+  <label for="name">Nom *</label>
+  <input type="text" id="name" name="name" placeholder="Votre nom (obligatoire)" required>
 
-            <label for="phone">Numéro de téléphone *</label>
-            <input type="tel" id="phone" name="phone" placeholder="Votre numéro de téléphone (obligatoire)" required>
+  <label for="phone">Numéro de téléphone *</label>
+  <input type="tel" id="phone" name="phone" placeholder="Votre numéro de téléphone (obligatoire)" required>
 
-            <label for="email">Adresse e-mail</label>
-            <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail (optionnel)">
+  <label for="email">Adresse e-mail</label>
+  <input type="email" id="email" name="_replyto" placeholder="Votre adresse e-mail (optionnel)">
 
-            <div class="form-group">
-              <label for="shooting-type">Type de shooting souhaité *</label>
-              <div class="shooting-options">
-                <label class="shooting-option">
-                  <input type="checkbox" name="shooting_type" value="pub">
-                  <div class="option-card">
-                    <span class="icon">📸</span>
-                    <span class="text">Shooting Pub</span>
-                  </div>
-                </label>
+  <div class="form-group">
+    <label for="shooting-type">Type(s) de shooting souhaité(s)</label>
+    <div class="shooting-options">
+      <label class="shooting-option">
+        <input type="checkbox" name="shooting[]" value="pub">
+        <div class="option-card">📸 Shooting Publicitaire</div>
+      </label>
 
-                <label class="shooting-option">
-                  <input type="checkbox" name="shooting_type" value="evenement">
-                  <div class="option-card">
-                    <span class="icon">🎉</span>
-                    <span class="text">Shooting Événement</span>
-                  </div>
-                </label>
+      <label class="shooting-option">
+        <input type="checkbox" name="shooting[]" value="event">
+        <div class="option-card">🎉 Shooting Événementiel</div>
+      </label>
 
-                <label class="shooting-option">
-                  <input type="checkbox" name="shooting_type" value="mariage">
-                  <div class="option-card">
-                    <span class="icon">💍</span>
-                    <span class="text">Shooting Mariage</span>
-                  </div>
-                </label>
+      <label class="shooting-option">
+        <input type="checkbox" name="shooting[]" value="mariage">
+        <div class="option-card">💍 Shooting Mariage</div>
+      </label>
 
-                <label class="shooting-option">
-                  <input type="checkbox" name="shooting_type" value="personnel">
-                  <div class="option-card">
-                    <span class="icon">👤</span>
-                    <span class="text">Shooting Personnel</span>
-                  </div>
-                </label>
-              </div>
-            </div>
+      <label class="shooting-option">
+        <input type="checkbox" name="shooting[]" value="perso">
+        <div class="option-card">👤 Shooting Personnel</div>
+      </label>
+    </div>
+  </div>
 
-            <label for="message">Décrivez votre projet *</label>
-            <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." required></textarea>
+  <label for="message">Décrivez votre projet </label>
+  <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." ></textarea>
 
-            <button type="submit" class="btn">Envoyer le message</button>
-            <p id="formMessage" class="form-message"></p>
+  <button type="submit" class="btn">Envoyer le message</button>
+  <p id="formMessage" class="form-message"></p>
 
-            <!-- 👇 PHOTO à la fin du formulaire -->
-            <div class="contact-photo">
-              <img src="images/contact-style.jpg" alt="Photo de contact">
-            </div>
-          </form>
+  <div class="contact-photo">
+    <img src="images/contact-style.jpg" alt="Photo de contact">
+  </div>
+</form>
+
+  <label for="message">Décrivez votre projet *</label>
+  <textarea id="message" name="message" rows="5" placeholder="Parlez-moi un peu de votre projet : type de séance, lieu, ambiance, nombre de personnes, envies..." required></textarea>
+
+  <button type="submit" class="btn">Envoyer le message</button>
+  <p id="formMessage" class="form-message"></p>
+
+  <div class="contact-photo">
+    <img src="images/contact-style.jpg" alt="Photo de contact">
+  </div>
+</form>
+
         </div>
       </div>
     </section>
