--- a/evenement.html
+++ b/evenement.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Événement - L'Objectif de Gabriel</title>
+    <title>Mariage - L'Objectif de Gabriel</title>
     <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="galerie.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,100 +23,100 @@
 
     <main>
         <section class="hero">
-            <h2>Photographie d'Événement</h2>
-            <p>Capturez l'énergie et les sourires de vos événements corporatifs ou familiaux.</p>
+            <h2>Photographie de Mariage</h2>
+            <p>Des clichés émouvants pour votre plus beau jour. De la préparation à la fête, chaque moment compté.</p>
         </section>
 
         <section class="galerie">
-            <h2>Galerie Événement</h2>
+            <h2>Galerie des evenement </h2>
             <div class="corkboard">
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement1.jpg" alt="Groupe lors d'un événement corporatif">
+                        <img src="images/evenement/evenement1.jpg" alt="Couple marié en extérieur">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement2.jpg" alt="Animation lors d'une fête familiale">
+                        <img src="images/evenement/evenement2.jpg" alt="Préparation de la mariée">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement3.jpg" alt="Conférence avec public attentif">
+                        <img src="images/evenement/evenement3.jpg" alt="Échange d'anneaux">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement4.jpg" alt="Spectacle en soirée événementielle">
+                        <img src="images/evenement/evenement4.jpg" alt="Danse des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement5.jpg" alt="Atelier interactif">
+                        <img src="images/evenement/evenement5.jpg" alt="Cérémonie intime">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement6.jpg" alt="Buffet festif">
+                        <img src="images/evenement/evenement6.jpg" alt="Photos de groupe">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement7.jpg" alt="Discours principal">
+                        <img src="images/evenement/evenement7.jpg" alt="Coucher de soleil mariage">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement8.jpg" alt="Jeux et animations">
+                        <img src="images/evenement/evenement8.jpg" alt="Dîner festif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement9.jpg" alt="Photos de groupe">
+                        <img src="images/evenement/evenement9.jpg" alt="Baiser des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement10.jpg" alt="Soirée networking">
+                        <img src="images/evenement/evenement10.jpg" alt="Décoration florale">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement11.jpg" alt="Décoration événementielle">
+                        <img src="images/evenement/evenement11.jpg" alt="Mariée seule portrait">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement12.jpg" alt="Performance live">
+                        <img src="images/evenement/evenement12.jpg" alt="Marié en costume">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement13.jpg" alt="Moments joyeux">
+                        <img src="images/evenement/evenement13.jpg" alt="Fête dansante">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement14.jpg" alt="Clôture d'événement">
+                        <img src="images/evenement/evenement14.jpg" alt="Détails alliance">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement/evenement15.jpg" alt="Souvenirs collectifs">
+                        <img src="images/evenement/evenement15.jpg" alt="Fin de soirée émouvante">
                     </div>
                     <div class="pin"></div>
                 </div>
