--- a/mariage.html
+++ b/mariage.html
@@ -1,48 +1,140 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prendre RDV - L'Objectif de Gabriel</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mariage - L'Objectif de Gabriel</title>
+    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="galerie.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <header>
-    <nav>
-      <h1>L'Objectif de Gabriel</h1>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="about.html">À Propos</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="rdv.html" class="active">Prendre RDV</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <h1>L'Objectif de Gabriel</h1>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="about.html">À Propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="rdv.html">Prendre RDV</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section class="rdv about-container">
-      <h2>Prendre Rendez-vous</h2>
-      <p>Choisissez une date pour votre shooting ou événement. Réservez directement via Koalendar ci-dessous.</p>
-      
-      <h3>Réservez directement</h3>
-      <div class="koalendar-container">
-        <iframe 
-          src="https://koalendar.com/e/meet-with-gabriel-87?embed=true" 
-          frameborder="0" 
-          width="100%" 
-          height="850" 
-          allowfullscreen>
-        </iframe>
-      </div>
-    </section>
-  </main>
+    <main>
+        <section class="hero">
+            <h2>Photographie de Mariage</h2>
+            <p>Des clichés émouvants pour votre plus beau jour. De la préparation à la fête, chaque moment compté.</p>
+        </section>
 
-  <footer>
-    <p>© 2025 L'Objectif de Gabriel - Tous droits réservés.</p>
-  </footer>
+        <section class="galerie">
+            <h2>Galerie Mariage</h2>
+            <div class="corkboard">
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage1.jpg" alt="Couple marié en extérieur">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage2.jpg" alt="Préparation de la mariée">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage3.jpg" alt="Échange d'anneaux">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage4.jpg" alt="Danse des mariés">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage5.jpg" alt="Cérémonie intime">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage6.jpg" alt="Photos de groupe">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage7.jpg" alt="Coucher de soleil mariage">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage8.jpg" alt="Dîner festif">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage9.jpg" alt="Baiser des mariés">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage10.jpg" alt="Décoration florale">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage11.jpg" alt="Mariée seule portrait">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage12.jpg" alt="Marié en costume">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage13.jpg" alt="Fête dansante">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage14.jpg" alt="Détails alliance">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage15.jpg" alt="Fin de soirée émouvante">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <!-- Polaroid final grand et visible (solo) -->
+                <div class="polaroid large-empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin"></div>
+                </div>
+            </div>
+            <!-- Bouton devis supprimé -->
+        </section>
+    </main>
 
-  <script src="script.js"></script>
+    <footer>
+        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
