--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shooting Personnel - L'Objectif de Gabriel</title>
+    <title>Mariage - L'Objectif de Gabriel</title>
     <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="galerie.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,100 +23,100 @@
 
     <main>
         <section class="hero">
-            <h2>Shooting Personnel</h2>
-            <p>Portraits authentiques et personnalisés pour vos souvenirs ou projets artistiques.</p>
+            <h2>Photographie de Mariage</h2>
+            <p>Des clichés émouvants pour votre plus beau jour. De la préparation à la fête, chaque moment compté.</p>
         </section>
 
         <section class="galerie">
-            <h2>Galerie Shooting Personnel</h2>
+            <h2>Galerie shooting personelle </h2>
             <div class="corkboard">
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel1.jpg" alt="Portrait personnel en studio">
+                        <img src="images/shooting-personnel/shooting-personnel1.jpg" alt="Couple marié en extérieur">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel2.jpg" alt="Shooting extérieur naturel">
+                        <img src="images/shooting-personnel/shooting-personnel2.jpg" alt="Préparation de la mariée">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel3.jpg" alt="Portrait créatif avec lumière douce">
+                        <img src="images/shooting-personnel/shooting-personnel3.jpg" alt="Échange d'anneaux">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel4.jpg" alt="Séance photo personnelle dynamique">
+                        <img src="images/shooting-personnel/shooting-personnel4.jpg" alt="Danse des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel5.jpg" alt="Portrait en noir et blanc">
+                        <img src="images/shooting-personnel/shooting-personnel5.jpg" alt="Cérémonie intime">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel6.jpg" alt="Shooting lifestyle urbain">
+                        <img src="images/shooting-personnel/shooting-personnel6.jpg" alt="Photos de groupe">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel7.jpg" alt="Expression faciale authentique">
+                        <img src="images/shooting-personnel/shooting-personnel7.jpg" alt="Coucher de soleil mariage">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel8.jpg" alt="Portrait artistique en nature">
+                        <img src="images/shooting-personnel/shooting-personnel8.jpg" alt="Dîner festif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel9.jpg" alt="Séance photo familiale personnelle">
+                        <img src="images/shooting-personnel/shooting-personnel9.jpg" alt="Baiser des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel10.jpg" alt="Détails portrait personnel">
+                        <img src="images/shooting-personnel/shooting-personnel10.jpg" alt="Décoration florale">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel11.jpg" alt="Shooting introspectif">
+                        <img src="images/shooting-personnel/shooting-personnel11.jpg" alt="Mariée seule portrait">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel12.jpg" alt="Portrait avec accessoires">
+                        <img src="images/shooting-personnel/shooting-personnel12.jpg" alt="Marié en costume">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel13.jpg" alt="Séance photo relax">
+                        <img src="images/shooting-personnel/shooting-personnel13.jpg" alt="Fête dansante">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel14.jpg" alt="Résultat final portrait">
+                        <img src="images/shooting-personnel/shooting-personnel14.jpg" alt="Détails alliance">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel15.jpg" alt="Moment personnel capturé">
+                        <img src="images/shooting-personnel/shooting-personnel15.jpg" alt="Fin de soirée émouvante">
                     </div>
                     <div class="pin"></div>
                 </div>
